--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 
 # misc
 .DS_Store
-#.env.local
-#.env.production
+.env.local
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
